# ferrum

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  README.md
.imgs/: fe_overall_plan.drawio
docs/: FUNCTIONS_API.md  SYSTEM_ARCHITECTURE.md
src/: lib.rs  main.rs
src/cli/: colors.rs  commands.rs  messages.rs  mod.rs  parsers.rs  splash_screen.rs
src/config/: mod.rs
src/functions/: mod.rs
src/functions/aggregators/: count.rs  max.rs  min.rs  mod.rs  resolver.rs
src/functions/scalars/: add.rs  mod.rs  resolver.rs
src/persistence/: database.rs  index.rs  mod.rs  row.rs  schema.rs  table.rs
src/serialization/: deserializers.rs  mod.rs  serializers.rs
src/sessions/: session.rs
tests/: persistence.rs
tests/persistence/: database.rs  table.rs
