[package]
name = "ferrum_engine"
description = "A tiny little database engine project powered by Rust."
version = "0.2.0"
edition = "2024"
authors = ["Taimoor Ikram <taimoorikram01@gmail.com>"]

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dotenvy = "0.15.7"
indexmap = {version = "2.13.0", features = ["serde"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlparser = "0.60.0"
